:bug: Fix spacing in mobile

--- a/wp-content/themes/commence/style.css
+++ b/wp-content/themes/commence/style.css
@@ -1377,7 +1377,6 @@ abbr[title]{
 
   #upcoming-events-carousel .ect-carousel-event-area{
     grid-template-columns: repeat(2,50%)!important;
-    margin: 0!important;
   }
 
   .ect-carousel-image{
@@ -1498,6 +1497,10 @@ abbr[title]{
 
   #beer-tabs .eael-tabs-nav{
   top: 79px;
+  }
+
+   #upcoming-events-carousel .ect-carousel-event-area{
+    margin: 0!important;
   }
 
   #beer-tabs .eael-tab-inline-icon{
